--- a/cv/src/css/custom.css
+++ b/cv/src/css/custom.css
@@ -155,3 +155,31 @@ font-family: 'bahalfont1'!important;
   font-size: 18px;
 
 }
+nav ul li{
+  display: inline-block;
+  list-style: none;
+  margin: 20px 40px;
+
+
+}
+nav ul li a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+  position: relative;
+}
+nav ul li a::after{
+  content: '';
+  width: 0;
+  height: 3px;
+  background: #ff004f;
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  transition: 0.5s;
+}
+nav ul li a:hover::after{
+  width: 100%;
+}
+
+
